<resources>
    <string name="app_name">CRM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">Customers</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">Latest Customers</string>
    <string name="activity_title_privacy_policy">Directory</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Directory</string>
    <string name="blacklist">Blacklist</string>
    <string name="pdf">Generate PDF</string>
    <string name="heat">Generate Heat Map</string>
    <string name="title_activity_detail">Detail</string>
    <string name="textview">TextView</string>
    <string name="title_activity_uploaded_pdfs">UploadedPDFs</string>

</resources>
