<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us"
                android:visible="false"/>
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy"
                android:visible="true"/>
            <item
                android:id="@+id/nav_blacklist"
                android:title="@string/blacklist"
                android:visible="true"/>
            <item
                android:id="@+id/nav_pdf"
                android:title="@string/pdf"
                android:visible="false"/>

        </menu>
    </item>

</menu>
